[package]
name = "libgoldilocks"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
sha3 = "0.10.6"
pbkdf2 = "0.12.2"
thiserror = "1"
bs58 = "0.5.1"
sha256 = "1.5.0"
ripemd = "0.1.3"
