[package]
name = "libgoldilocks"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
serdect = "0.2.0"
sha3 = "0.10.6"
thiserror = "1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
